Fix Navbar and Hero alignment and sizing

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+    outline: 2px solid red;
+}
 
 body {
     height: 100vh;
@@ -14,16 +17,27 @@ header {
     flex: 1;
     display: flex;
     flex-direction: column;
+    align-items: center;
     background-color: #1F2937;
     color: #F9FAF8;
     font-size: 24px;
     display: flex;
-    padding: 16px 150px;
+    padding: 16px;
+    width: 100%;
+}
+
+.navbar,
+.hero,
+.info,
+.quote,
+.signup {
+    max-width: 1000px;
 }
 
 .navbar {
     display: flex;
     margin-bottom: 100px;
+    width: 100%;
 }
 .logo {
     font-weight: 700;
@@ -51,6 +65,7 @@ header a {
     background-color: #1F2937;
     color: #F9FAF8;
     display: flex;
+    flex-wrap: wrap-reverse;
     text-align: left;
     font-size: 48px;
     font-weight: 900;
@@ -92,10 +107,6 @@ button {
 .image .placeholder {
     align-self: center;
     text-align: center;
-}
-
-.info {
-    flex: 1;
 }
 
 .quote {
